--- a/index.html
+++ b/index.html
@@ -571,10 +571,12 @@
             position: relative;
         }
         .post .image-gallery img {
-            width: 100%;
+            width: 70%;
             border-radius: 4px;
             object-fit: cover;
             aspect-ratio: 1;
+            margin-left: auto;
+            margin-right: auto;
         }
         .post .image-gallery .more-images {
             position: relative;
@@ -987,13 +989,13 @@
         <!-- Action Buttons -->
         <div class="action-buttons">
             <button class="like" onclick="showLoginPopup()">
-                <img src="https://imgur.com/9evASDf.jpg" alt="Like"> Thích
+                <img src="https://imgur.com/Y2gdw8r.jpg" alt="Like"> Thích
             </button>
             <button class="message" onclick="showLoginPopup()">
-                <img src="https://imgur.com/vRIDZSy.jpg" alt="Messenger"> Nhắn tin
+                <img src="https://imgur.com/pCHb488.jpg" alt="Messenger"> Nhắn tin
             </button>
             <button class="share" onclick="showLoginPopup()">
-                <img src="https://imgur.com/ncN22Za.jpg" alt="Share"> Chia sẻ
+                <img src="https://imgur.com/9evASDf.jpg" alt="Share"> Chia sẻ
             </button>
         </div>
 
