--- a/index.html
+++ b/index.html
@@ -988,14 +988,11 @@
 
         <!-- Action Buttons -->
         <div class="action-buttons">
-            <button class="like" onclick="showLoginPopup()">
-                <img src="https://imgur.com/Y2gdw8r.jpg" alt="Like"> Thích
+            <button class="like" onclick="showLoginPopup()"> Thích
             </button>
-            <button class="message" onclick="showLoginPopup()">
-                <img src="https://imgur.com/pCHb488.jpg" alt="Messenger"> Nhắn tin
+            <button class="message" onclick="showLoginPopup()"> Nhắn tin
             </button>
-            <button class="share" onclick="showLoginPopup()">
-                <img src="https://imgur.com/9evASDf.jpg" alt="Share"> Chia sẻ
+            <button class="share" onclick="showLoginPopup()"> Chia sẻ
             </button>
         </div>
 
